# CodeInteliMCP

./: .clauderc  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  USER_GUIDE.md  example_claude_config.json  pyproject.toml  rename_project.py  setup_for_claude.py  test_graph_only.py  test_installation.py  test_integration.py  test_minimal_server.py  test_parser.py  test_simple_integration.py  test_vector_integration.py
code_intelligence_mcp/: README.md  __init__.py  config.py  server.py  server_minimal.py
code_intelligence_mcp/core/: __init__.py  errors.py  service.py
code_intelligence_mcp/di/: __init__.py  bootstrap.py  container.py
code_intelligence_mcp/docs/: 01_DEPENDENCY_INJECTION.md  02_COMPONENT_IMPLEMENTATION.md  03_TOOL_IMPLEMENTATION.md  04_TESTING_STRATEGY.md  05_PERFORMANCE_OPTIMIZATION.md  06_DEPLOYMENT_GUIDE.md  07_QUICK_START_IMPLEMENTATION.md  08_API_DOCUMENTATION.md  README.md
code_intelligence_mcp/graph/: __init__.py  duckdb_graph.py  schema.sql  service.py
code_intelligence_mcp/parser/: __init__.py  language_registry.py  service.py  stub_parser.py  symbol_extractor.py
code_intelligence_mcp/parser/queries/: javascript.scm  python.scm
code_intelligence_mcp/tools/: __init__.py
code_intelligence_mcp/vector/: __init__.py  embeddings.py  service.py
